chore: add author field

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "keywords": [
     "bpmn-io"
   ],
-  "author": "",
+  "author": "bpmn.io",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/smbea/bpmn-js-create-append-anything/issues"
