--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,6 +19,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+      - name: Setup project
+        uses: bpmn-io/actions/setup@latest
       - name: Build with coverage
         run: COVERAGE=1 npm run all
       - name: Upload Coverage
